# OpenAutoIt

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  flake.nix
.clusterfuzzlite/: Dockerfile  build.sh
.github/workflows/: Archive.yml  Cleanup.yml  ClusterFuzzLite-Batch.yml  Emscripten.yml  (+10 more)
OpenAutParser/: CMakeLists.txt
OpenAutParser/tests/: CMakeLists.txt
OpenAutParser/tests/src/: Dummy.cpp
OpenAutoIt/: CMakeLists.txt
OpenAutoIt/include/: REPLInterpreter.hpp
OpenAutoIt/src/: REPLInterpreter.cpp  main.cpp
OpenAutoItParser/: CMakeLists.txt
OpenAutoItParser/fuzzers/: CMakeLists.txt
OpenAutoItParser/fuzzers/dictionary/: code.dict  tokens.dict
OpenAutoItParser/fuzzers/src/: Lexer.fuzz.cpp  ParseAST.fuzz.cpp  Parser.fuzz.cpp  Tokenizer.fuzz.cpp
OpenAutoItParser/include/OpenAutoIt/: Associativity.hpp  Lexer.hpp  ParseAST.hpp  Parser.hpp  Token.hpp  TokenKind.hpp  TokenStream.hpp  Tokenizer.hpp  Utililty.hpp  VariableScope.hpp
OpenAutoItParser/include/OpenAutoIt/AST/: ASTArraySubscriptExpression.hpp  ASTBinaryExpression.hpp  ASTBooleanLiteral.hpp  ASTCallExpression.hpp  ASTDocument.hpp  ASTExpressionStatement.hpp  ASTFunctionCallExpression.hpp  ASTFunctionDefinition.hpp  ASTIfStatement.hpp  ASTIntegerLiteral.hpp  ASTNode.hpp  ASTStringLiteral.hpp  ASTUnaryExpression.hpp  ASTVariableAssignment.hpp  ASTVariableDeclaration.hpp  ASTVariableExpression.hpp  ASTWhileStatement.hpp
OpenAutoItParser/src/: Lexer.cpp  ParseAST.cpp  Parser.cpp  TokenStream.cpp  Tokenizer.cpp  Utility.cpp
OpenAutoItParser/tests/: CMakeLists.txt
OpenAutoItParser/tests/integration/: CMakeLists.txt
OpenAutoItParser/tests/integration/samples/function_call_expression/: call_abs.ast  call_ini_read.ast  call_ini_read.au3  call_tcp_shutdown.ast  nested_call.au3
OpenAutoItParser/tests/integration/samples/function_definition/: empty_function.au3  empty_one_param.ast  empty_various_param.ast  empty_various_param.au3
OpenAutoItParser/tests/integration/samples/hex_literals/: basic2.ast  basic2.au3
OpenAutoItParser/tests/integration/samples/if_statement/: empty.ast
OpenAutoItParser/tests/integration/samples/integer_literals/: basic.ast
OpenAutoItParser/tests/integration/samples/variable_declaration/: assign_function_result.ast  assign_int_literal.ast  assign_int_literal.au3  assign_other_var.ast  assign_other_var.au3  assign_plus_expression.ast  assign_plus_expression.au3  assign_string_literal_double_quotes.ast  uninitialized.ast
OpenAutoItParser/tests/integration/samples/while_statement/: infinite_sleep.ast
OpenAutoItParser/tests/integration/src/: main.cpp
OpenAutoItParser/tests/src/: Lexer.test.cpp  Tokenizer.test.cpp
OpenAutoItParser/tests/unittests/: CMakeLists.txt
OpenAutoItParser/tests/unittests/src/: Lexer.test.cpp  Parser.test.cpp
Parser/: CMakeLists.txt
Parser/tests/integration/: CMakeLists.txt
Parser/tests/integration/samples/function_call_expression/: call_tcp_shutdown.au3  nested_call.ast
Parser/tests/integration/samples/function_definition/: default_parameter.ast  default_parameter.au3  empty_function.ast
Parser/tests/integration/samples/hex_literals/: basic.ast  basic.au3
Parser/tests/integration/samples/if_statement/: empty.au3
Parser/tests/integration/samples/integer_literals/: basic.au3
Parser/tests/integration/samples/other/: empty_file.ast
Parser/tests/integration/samples/variable_declaration/: assign_bool_literal.ast  assign_bool_literal.au3  assign_function_result.au3  assign_int_literal.ast  assign_string_literal_single_quotes.ast  assign_string_literal_single_quotes.au3  uninitialized.ast
Parser/tests/integration/samples/while_statement/: infinite_sleep.au3  simple_infinite_loop.ast
Parser/tests/integration/src/: main.cpp
fuzzing/: CMakeLists.txt
fuzzing/samples/: crash-7b66030987a83f4131eaa5f20d841242bbcdcbe9  crash-b588409b7f15f348d559a5edba3f6cebf99258f1
fuzzing/src/: IncludeInterpreter.fuzz.cpp  Interpreter.fuzz.cpp  Lexer.fuzz.cpp  Parser.fuzz.cpp
parser/: CMakeLists.txt
parser/fuzzing/: CMakeLists.txt
parser/fuzzing/src/: Lexer.fuzz.cpp
parser/include/OpenAutoIt/: AST.hpp  ASTForward.hpp  Associativity.hpp  Diagnostic.hpp  DiagnosticBuilder.hpp  DiagnosticConsumer.hpp  DiagnosticEngine.hpp  DiagnosticIds.hpp  FunctionReference.hpp  IncludeType.hpp  Lexer.hpp  ParseError.hpp  ParseNote.hpp  ParseResult.hpp  ParseWarning.hpp  Parser.hpp  SourceFile.hpp  SourceLocation.hpp  SourceManager.hpp  Statements.hpp  Token.hpp  TokenKind.hpp  TokenStream.hpp  Utililty.hpp  VariableScope.hpp
parser/include/OpenAutoIt/AST/: ASTArraySubscriptExpression.hpp  ASTBinaryExpression.hpp  ASTBooleanLiteral.hpp  ASTDocument.hpp  ASTExitStatement.hpp  ASTExpression.hpp  ASTExpressionStatement.hpp  ASTFloatLiteral.hpp  ASTFunctionCallExpression.hpp  ASTFunctionDefinition.hpp  ASTFunctionReferenceExpression.hpp  ASTIfStatement.hpp  ASTIntegerLiteral.hpp  ASTKeywordLiteral.hpp  ASTMacroExpression.hpp  ASTNode.hpp  ASTStatement.hpp  ASTStringLiteral.hpp  ASTTernaryIfExpression.hpp  ASTUnaryExpression.hpp  ASTVariableAssignment.hpp  ASTVariableExpression.hpp  ASTWhileStatement.hpp
parser/src/: Diagnostic.cpp  DiagnosticBuilder.cpp  DiagnosticConsumer.cpp  DiagnosticEngine.cpp  Lexer.cpp  ParseError.cpp  ParseWarning.cpp  Parser.cpp  SourceFile.cpp  SourceManager.cpp  TokenStream.cpp  Utility.cpp
parser/tests/: CMakeLists.txt
parser/tests/src/: Lexer.test.cpp  Utility.test.cpp
runtime/: CMakeLists.txt
runtime/fuzzing/: CMakeLists.txt
runtime/fuzzing/src/: Interpreter.fuzz.cpp
runtime/include/OpenAutoIt/: BuiltinFunctions.hpp  FunctionScope.hpp  Interpreter.hpp  Scope.hpp  StackTraceEntry.hpp  UnsafeOperations.hpp  Variant.hpp  VirtualMachine.hpp
runtime/src/: BuiltinFunctions.cpp  Interpreter.cpp  UnsafeOperations.cpp  Variant.cpp  VirtualMachine.cpp
runtime/tests/: CMakeLists.txt
runtime/tests/src/: Variant.test.cpp
test_runner/: CMakeLists.txt
test_runner/src/: main.cpp
tools/: CMakeLists.txt
tools/ASTDumper/: CMakeLists.txt
tools/ASTDumper/src/: main.cpp
(+85 files in other folders)
