project(OpenAutoIt_TestRunner LANGUAGES CXX)

file(GLOB_RECURSE OPENAUTOIT_TESTRUNNER_SOURCES CONFIGURE_DEPENDS "src/*.cpp")
file(GLOB_RECURSE OPENAUTOIT_TESTRUNNER_HEADERS CONFIGURE_DEPENDS "include/*.hpp")

add_executable(${PROJECT_NAME} ${OPENAUTOIT_TESTRUNNER_SOURCES} ${OPENAUTOIT_TESTRUNNER_HEADERS})

target_link_libraries(${PROJECT_NAME} PUBLIC OpenAutoIt::Runtime)

file(GLOB SAMPLES_DIR "${CMAKE_SOURCE_DIR}/samples")
cmake_path(NATIVE_PATH SAMPLES_DIR NORMALIZE SAMPLES_DIR)

if(NOT DEFINED PHI_PLATFORM_EMSCRIPTEN AND NOT DEFINED PHI_PLATFORM_WINDOWS)
  add_test(NAME "OpenAutoItIntegrationTests" COMMAND $<TARGET_FILE:${PROJECT_NAME}>
                                                     "${SAMPLES_DIR}")
endif()
